--- a/src/css/content.css
+++ b/src/css/content.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   padding-left: var(--spacing-3);
-  padding-right: calc(16px + var(--spacing-5));
+  padding-right: calc(16px + var(--spacing-3));
 }
 
 .intro-text .intro-text-inner {
@@ -15,8 +15,11 @@
 }
 
 .intro-text-sub {
-  opacity: 0;
   margin-left: 4px;
+}
+
+.intro-text-sub span {
+  opacity: 0;
 }
 
 h1.hide-text {
@@ -35,7 +38,7 @@ h1.hide-text {
   height: 100%;
   padding-left: var(--spacing-3);
   /* 16px is width of scollbar */
-  padding-right: calc(16px + var(--spacing-5));
+  padding-right: calc(16px + var(--spacing-3));
 }
 
 .content-wrapper-inner {
@@ -51,7 +54,7 @@ h1.hide-text {
 
 .paper {
   padding: var(--spacing-3);
-  background-color: white;
+  background-color: var(--white);
 }
 
 .avaible-on-link {
@@ -64,5 +67,5 @@ h1.hide-text {
 }
 
 .avaible-on-link:hover {
-  color: white;
+  color: var(--white);
 }
